# typelefter

./: .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  pyproject.toml  setup.cfg  vscode-vim-cheatsheet.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  tech_debt.md
.github/workflows/: check_semantic_version.yml  ci.yml  pr_description.yml  release.yml
my_first_project/: sample.md  scene1.md  scene2.md  scene3.md
scripts/: add_license_headers.py
tests/: test_smoke.py
tools/: licesnse_adder.py
typelefter/: app.py  main.py
typelefter/core/: compile.py  compiler.py  project.py  version.py  version_control.py
typelefter/ui/: binder.py  corkboard.py  editor.py  main_window.py
typelefter/ui/binder/: binder_widget.py
typelefter/ui/dialogs/: __init__.py
typelefter/ui/editor/: markdown_editor.py
typelefter/utils/: helpers.py
