[tool.poetry]
name = "typelefter"
version = "0.1.0"
description = ""
authors = ["Vijay Vasudevan <vijay.vasudevan@wind-pioneers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.10.0"
gitpython = "^3.1.45"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pyinstaller = "^6.16.0"
pre-commit = "^4.4.0"
commitizen = "^4.10.0"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
flake8-bugbear = "^25.10.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
