[metadata]
name = typelefter
version = 0.1.0
description = "Typelefter: Python + C++ + PySide6 project"
author = "Vijay Vasudevan"
license = GNU GPLv3

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    PySide6
    sqlite-utils
    pybind11

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    black
    isort
    mypy

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    src/typelefter/cpp

[tool:pytest]
testpaths = tests
addopts = --cov=typelefter --cov-report=term-missing
   src/typelefter/cpp
